# Barbarossa

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  config.example.toml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
barbarossa/: __init__.py  authorization.py  banner.py  cli.py  config.py  models.py  safety.py  scope.py
barbarossa/inspect/: __init__.py  config_rules.py  docker_rules.py  javascript_rules.py  python_rules.py  registry.py  scanner.py  secret_rules.py
barbarossa/probe/: __init__.py  client.py  headers.py  runner.py
barbarossa/reporting/: __init__.py  console.py  html_report.py  json_report.py  sarif_report.py
barbarossa/utils/: __init__.py  rate_limit.py  redaction.py  urls.py
docs/: active-probes.md  adding-custom-rules.md  authorization-and-scope.md  getting-started.md  learning-mode.md  reports.md  static-inspection.md
examples/secure_demo_app/: app.py
examples/vulnerable_demo_app/: Dockerfile.demo  app.py  requirements.txt
tests/: test_authorization.py  test_cli.py  test_config.py  test_probe_client.py  test_probe_runner.py  test_python_rules.py  test_rate_limit.py  test_reporting_security.py  test_scope.py  test_secret_detection.py
