[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barbarossa"
version = "0.1.0"
description = "Deterministic, non-destructive web application security inspection and authorized testing toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "BARBAROSSA Contributors"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer[all]>=0.9.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-jinja2>=2.11.0",
]

[project.scripts]
barbarossa = "barbarossa.cli:main"

[tool.setuptools]
packages = ["barbarossa"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "UP", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
